--- a/onmars/index.html
+++ b/onmars/index.html
@@ -15,7 +15,17 @@
     <title>On Mars Solo Deck</title>
 </head>
 <body>
-    
+    <main id="onmars">
+        <p class="cards-left">{{ currentDeck.length }} left</p>
+        <p>{{ currentCard.action }} - {{ currentCard.travel }} - {{ currentCard.mission }}</p>
+        <button v-on:click="draw" class="draw-button">Draw</button>
+        <div class="sides">
+            <img src="images/orbitalside.png" class="orbital-colony" v-bind:class="{ currentSide: currentSide === 0 }" v-on:click="currentSide = 0" />
+            <img src="images/colonyside.png" class="orbital-colony" v-bind:class="{ currentSide: currentSide === 1 }" v-on:click="currentSide = 1" / />
+        </div>
+        <p>Turn order space: {{ turnOrderSpace() }}</p>
+        <button v-on:click="reset" class="reset-button">Reset</button>
+    </main>
 </body>
 <script src="app.js"></script>
 </html>
