--- a/onmars/index.html
+++ b/onmars/index.html
@@ -17,7 +17,10 @@
 <body>
     <main id="onmars">
         <p class="cards-left">{{ currentDeck.length }} left</p>
-        <p>{{ currentCard.action }} - {{ currentCard.travel }} - {{ currentCard.mission }}</p>
+        <div class="mission">
+            <p>{{ currentCard.mission }}</p>
+        </div>
+        <p>{{ currentCard.action }} - {{ currentCard.travel }}</p>
         <div class="sides">
             <img src="images/orbitalside.png" class="orbital-colony" v-bind:class="{ currentSide: currentSide === 0 }" v-on:click="currentSide = 0" />
             <img src="images/colonyside.png" class="orbital-colony" v-bind:class="{ currentSide: currentSide === 1 }" v-on:click="currentSide = 1" / />
