--- a/onmars/index.html
+++ b/onmars/index.html
@@ -59,7 +59,7 @@
         <p class="startmessage" v-if="gameHasNotStarted">
             Choose AI starting side
         </p>
-        <div class="sides">
+        <div class="sides" v-bind:class="{ noBottomMargin: !gameHasNotStarted }">
             <img src="images/orbitalside.png" class="orbital-colony" v-bind:class="{ currentSide: currentSide === 0 }" v-on:click="setSide(0)" />
             <img src="images/colonyside.png" class="orbital-colony" v-bind:class="{ currentSide: currentSide === 1 }" v-on:click="setSide(1)" / />
         </div>
