--- a/onmars/index.html
+++ b/onmars/index.html
@@ -80,6 +80,7 @@
             <ol>
                 <li>Choose the AI's starting side and click 'Start Game'.</li>
                 <li>The game will start with the first card drawn, and the AI's action indicated using the same icon as shown on the game board.</li>
+                <li>If the action requires choosing a hex, the hex selection icon below can be used. See page 3 of the Pathfinder rulebook for an explanation.</li>
                 <li>Once the deck reshuffles, the mission tracker indicator (A, B, or C) will appear at the top.</li>
                 <li>If the shuttle travels, check the information at the bottom of the screen: if the rocket icon is not grayed out, then the AI travels.</li>
                 <li>The turn order space that should be used by the AI is highlighted.</li>
