--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 </head>
 <body>
     <h1>Games With Tony</h1>
+    <h2>Online Helpers</h2>
     <p><a href="/onmars">On Mars: Pathfinder and Lacerda Solo Helper</a></p>
+    <p><a href="/nemoswar">Nemo's War: Online Dice Roller</a></p>
+    <h2>Solo Modes</h2>
+    <p><a href="https://boardgamegeek.com/filepage/211160/pathfinder-unofficial-mars-solo-mode-w-curiosity-s">Pathfinder - An Unofficial On Mars Solo Mode (w/ Curiosity Solo Campaign)</a></p>
+    <p><a href="https://boardgamegeek.com/filepage/209734/eliza-brass-birmingham-solo-mode-w-mechanis-solo-c">Eliza - A Brass: Birmingham Solo Mode (w/ Mechanis Solo Campaign)</a></p>
+    <h2>Learn Coding</h2>
+    <p>Interested in learning web development? Check out my courses on Udemy and Pluralsight, taken by over 200,000 students. Find links on my site: <a href="https://anthonyalicea.com/">anthonyalicea.com</a></p>
 </body>
 </html>
