--- a/onmars/index.html
+++ b/onmars/index.html
@@ -84,7 +84,7 @@
                 <li>Once the deck reshuffles, the mission tracker indicator (A, B, or C) will appear at the top.</li>
                 <li>If the shuttle travels, check the information at the bottom of the screen: if the rocket icon is not grayed out, then the AI travels.</li>
                 <li>The turn order space that should be used by the AI is highlighted. When playing with Lacerda, you may wish to use the Pathfinder rule to move the AI to the  turn order space when the shuttle travels, even if the AI doesn't travel (the AI doesn't gain the turn order space benefit). The app will show you the appropriate turn order space even for when the AI doesn't travel.</li>
-                <li>If the AI travels, tap the orbital or colony icons at the bottom to tell the app the side of the board the AI moves before drawing another card.<br /><br />Important: Don't forget to update the side of the board or the next card draw will show you the action from the wrong side of the board! (If you do this by accident, just check the corresponding action number on the other side of the board, per the rules).</li>
+                <li>If the AI travels, tap the orbital or colony icons at the bottom to tell the app the side of the board the AI moves to before drawing another card.<br /><br />Important: Don't forget to update the side of the board or the next card draw will show you the action from the wrong side of the board! (If you do this by accident, just check the corresponding action number on the other side of the board, per the rules).</li>
             </ol>
         </section>
     </main>
