--- a/onmars/index.html
+++ b/onmars/index.html
@@ -21,7 +21,7 @@
         <div class="mission" v-bind:class="{ showMission: showMission }" v-if="!gameHasNotStarted">
             <p>{{ currentCard.mission }}</p>
         </div>
-        <img v-bind:src="'images/' + actionImage()" class="action" v-if="!gameHasNotStarted" />
+        <img v-bind:src="'images/' + actionImage()" class="action" v-if="!gameHasNotStarted" v-on:click="showReferenceModal" />
         <button v-on:click="draw" class="draw-button" v-if="!gameHasNotStarted">Draw ({{ cardsLeft }})</button>
         <img v-bind:src="'images/' + hexDirImage()" class="hexdir" v-if="!gameHasNotStarted" />
         <ul class="turn-order-spaces" v-if="!gameHasNotStarted">
@@ -86,6 +86,186 @@
                 <li>The turn order space that should be used by the AI is highlighted. When playing with Lacerda, you may wish to use the Pathfinder rule to move the AI to the  turn order space when the shuttle travels, even if the AI doesn't travel (the AI doesn't gain the turn order space benefit). The app will show you the appropriate turn order space even for when the AI doesn't travel.</li>
                 <li>If the AI travels, tap the orbital or colony icons at the bottom to tell the app the side of the board the AI moves to before drawing another card.<br /><br />Important: Don't forget to update the side of the board or the next card draw will show you the action from the wrong side of the board! (If you do this by accident, just check the corresponding action number on the other side of the board, per the rules).</li>
             </ol>
+        </section>
+        <section class="rulesreference" v-if="showReference">
+            <nav class="closereference">
+                <a href="#" v-on:click="hideReferenceModal">(X) Close Rules Reference</a>
+            </nav>
+            <section class="rule" v-if="actionImage() === 'obtainblueprint.png'">
+                <section class="rule-entry">
+                    <h2>LACERDA: Obtain Blueprint</h2>
+                    <p>
+                        Take the Blueprint of a type that scores Lacerda’s Scientists. If tied, take the leftmost card from the row with the most cards in it (bottom row if tied).
+                    </p>
+                </section>
+                <section class="rule-entry">
+                    <h2>PATHFINDER: Obtain Blueprint</h2>
+                    <p>
+                        Take the Blueprint of a type that scores the highest possible (most number of blueprints in the game) for Pathfinder’s Scientists. If tied, take the leftmost card from the row with the most cards in it (bottom row if tied). Keep in a line with oldest to the left.
+                    </p>
+                </section>
+            </section>
+            <section class="rule" v-if="actionImage() === 'learnnewtechnology.png'">
+                <section class="rule-entry">
+                    <h2>LACERDA: Learn New Technology</h2>
+                    <p>
+                        Lacerda takes the cheapest one, leftmost if there are more than one. Place it in Lacerda’s laboratory, top space first, taking benefit as normal.
+                    </p>
+                </section>
+                <section class="rule-entry">
+                    <h2>PATHFINDER: Learn New Technology</h2>
+                    <p>
+                        Pathfinder takes the cheapest one, leftmost if there are more than one. Place it in Pathfinder’s laboratory, top space first, taking the benefit as normal.
+                    </p>
+                </section>
+            </section>
+            <section class="rule" v-if="actionImage() === 'researchanddevelopment.png'">
+                <section class="rule-entry">
+                    <h2>LACERDA: Research and Development</h2>
+                    <p>
+                        Lacerda develops the most-developed Tech that can be de veloped once, then the least developed Tech that can be developed once. If two Techs are tied, develop the bottom one.
+                    </p>
+                </section>
+                <section class="rule-entry">
+                    <h2>PATHFINDER: Research and Development</h2>
+                    <p>
+                        Pathfinder develops the most-developed Tech that can be developed once, then the last developed Tech that can be developed once. If two Techs are tied, develop the bottom one.
+                    </p>
+                    <p>
+                        When developing a chosen Tech, move it to the right and down, if possible, otherwise to the right and up. Receive any benefits as normal. Ignore crystal and specific resource benefits, but Pathfinder will take the Resupply (see below) and other benefits.
+                    </p>
+                </section>
+            </section>
+            <section class="rule" v-if="actionImage() === 'constructabuilding.png'">
+                <section class="rule-entry">
+                    <h2>LACERDA: Construct a Building</h2>
+                    <p>
+                        Lacerda always builds the Building corresponding to the icon his Bot is on, but only if the LSS marker for that Building is below the Colony level marker.
+                    </p>
+                    <p>
+                        If his Bot is on the icon for a Building whose marker is abo ve the c urrent Colony level, he builds the next Building in the sequence, unless that Building’s marker is above the current Colony level, and so on. He always constructs a Mine if that is next in the sequence.
+                    </p>
+                    <p>
+                        When constructing, Lacerda always tries to build the largest Complex possible using any available Tech. If there is more than one legal Building placement, check the Resolving Ambiguities rules.
+                    </p>
+                    <p>
+                        After constructing, move his Bot to the next icon in the s equence after the Building that was just constructed.
+                    </p>
+                </section>
+                <section class="rule-entry">
+                    <h2>PATHFINDER: Construct a Building</h2>
+                    <p>
+                        Pathfinder only ever builds mines and building types that are below the Colony level marker. It can select a build location from any available hex on Mars (Bot position does not matter). It always tries to build the largest complex possible, using any available Tech. If multiple hexes are valid build locations, it uses Card Order to tie break.
+                    </p>
+                    <p>
+                        After constructing use normal rules for Progress Cube placement and OP rewards. Finally, if Pathfinder has a Colonist on the Hire a Scientist action slot, it retrieves that Colonist, otherwise it ignores the 2nd LSS benefit.
+                    </p>
+                    <p class="optional">
+                        Optional Difficulty Modifier #2: If multiple building types are tied for largest possible complex, Pathfinder chooses the building type that will give it the most OP at that moment from the LSS Reward tiles. Leftmost if tied.
+                    </p>
+                </section>
+            </section>
+            <section class="rule" v-if="actionImage() === 'upgradeabuilding.png'">
+                <section class="rule-entry">
+                    <h2>LACERDA: Upgrade a Building</h2>
+                    <p>
+                        Lacerda uses one of his Blueprints and upgrades a Building anywhere on the board. If the Upgrade Tech is in play, he uses it if able to upgrade as many Buildings as he can.
+                    </p>
+                    <p>
+                        If there is more than one Blueprint to upgrade, he gives preference to the one that increases the OP provided by his Scientists.
+                    </p>
+                </section>
+                <section class="rule-entry">
+                    <h2>PATHFINDER: Upgrade a Building</h2>
+                    <p>
+                        Pathfinder chooses the Blueprint that most increases the OP provided by his Scientists. If there is none, it chooses the oldest blueprint. It uses Tech, if available, to upgrade as many Buildings as it can. It chooses Buildings to upgrade using Card Order (icon shown in the app below the 'Draw' button).
+                    </p>
+                </section>
+            </section>
+            <section class="rule" v-if="actionImage() === 'hireascientist.png'">
+                <section class="rule-entry">
+                    <h2>LACERDA: Hire a Scientist or Take an Earth Contract</h2>
+                    <p>
+                        Lacerda hires the Scientist that will score him the most potential OP based on the number of Blueprints owned by each player (whether used to upgrade yet or not). Once he has two Scientists, he takes a Contract instead (the one worth the most OP). His Contracts are considered automatically completed. After taking the Scientist or Contract card, Lacerda shuffles the Contract deck and refills the display with the top card.
+                    </p>
+                </section>
+                <section class="rule-entry">
+                    <h2>PATHFINDER: Hire a Scientist or Take an Earth Contract</h2>
+                    <p>
+                        If there is at least one Contract on display, Pathfinder takes a Contract (the one worth the most OP, leftmost on the display in case of a tie). Otherwise, it takes the Scientist that will score the most potential OP based on the number of Blueprint cards owned by you and Pathfinder together (whether used to upgrade a Building yet or not). In case of a tie, take the one which scores for its Blueprints, oldest first. If it has no Blueprints, take the leftmost Scientist.
+                    </p>
+                    <p>
+                        After taking the Scientist or Contract card, Pathfinder shuffles the Contract deck and refills the display with the top card.
+                    </p>
+                </section>
+            </section>
+            <section class="rule rule--standard">
+                <section class="rule-entry">
+                    <p>
+                        * If Lacerda cannot perform his action, it moves its Rover (see below).
+                    </p>
+                    <p>
+                        * If Pathfinder cannot perform its action, it takes the Move Bots action (see below).
+                    </p>
+                </section>
+            </section>
+            <section class="rule rule--standard">
+                <section class="rule-entry">
+                    <h2>LACERDA: Moving Lacerda's Rover</h2>
+                    <p>
+                        Whenever Lacerda moves his Rover, it moves toward the closest tile (either Research or Discovery) that it can collect. Do not count any Discovery tiles that give Resources as they are useless to Lacerda. If tied, check the Resolving Ambiguities rules. He uses any available Tech and spends additional Crystals if required. If he reaches a tile , it is resolved immediately.
+                    </p>
+                </section>
+                <section class="rule-entry">
+                    <h2>PATHFINDER: Move Bots</h2>
+                    <p>
+                        After taking any action on the Colony side, using Card Order tiebreaker for all hex choices (icon below the 'Draw' button), Pathfinder also:
+                    </p>
+                    <ol>
+                        <li>Chooses one Bot using Card Order.</li>
+                        <li>Moves that Bot a number of hexes equal to the current Colony Status, towards the nearest Research or Discovery tile or crystal.</li>
+                        <li>Stops that Bot’s movement if it lands on a Research or Discovery tile or crystal and then removes that tile or crystal from the game.</li>
+                    </ol>
+                </section>
+            </section>
+            <section class="rule rule--standard">
+                <section class="rule-entry">
+                    <h2>LACERDA: Resupply</h2>
+                    <p>
+                        Lacerda only takes this action in the Shuttle Phase when his as tronaut is placed on the Resupply space of the turn order track, or by placing a Tech tile on the appropriate space of his Lab.
+                    </p>
+                    <p>
+                        Lacerda takes whatever there is the most of. In case of a tie, he takes the leftmost one (Crystals first). Any Resources taken are placed into the general supply.
+                    </p>
+                </section>
+                <section class="rule-entry">
+                    <h2>PATHFINDER: Resupply</h2>
+                    <p>
+                        Pathfinder only takes the Resupply action when the Colony Status updates or as an R&D benefit.
+                    </p>
+                    <p>
+                        Pathfinder takes the resource least produced by your built Blueprints (thus, resources not produced by your Advanced Buildings on the board get priority). If tied, then the least potentially produced by your built and unbuilt Blueprints (thus resources that don’t appear on your Blueprints get priority). If still tied, then leftmost available.
+                    </p>
+                </section>
+            </section>
+            <section class="rule rule--standard">
+                <section class="rule-entry">
+                    <h2>LACERDA: Colony Levels Up</h2>
+                    <p>
+                        Every time this happens, Lacerda places a Shelter according to the c onstruction rules above, then he takes 1 Bot which is placed on his Player board. It is never placed on the main board, but it counts towards LSS Rewards or Missions.
+                    </p>
+                </section>
+                <section class="rule-entry">
+                    <h2>PATHFINDER: Colony Levels Up</h2>
+                    <ol>
+                        <li>Pathfinder receives the benefits of the discovery tiles on the space the Colony Status marker is moved on to. Use the corresponding Pathfinder rules for each benefit. Then remove those tiles from the game.</li>
+                        <li>Pathfinder builds a shelter.</li>
+                        <li>Pathfinder gains a Bot and places it on that just-built shelter.</li>
+                        <li>Pathfinder welcomes a shuttle (but does not gain a Bot or Colonist).</li>
+                        <li>After the Warehouse is refilled, Pathfinder takes a resupply action (see below).</li>
+                    </ol>
+                </section>
+            </section>
         </section>
     </main>
 </body>
